# Game_of_life

./: CMakeLists.txt  README.md  main.cpp
include/: Engine.h  Visualizer.h
src/: CMakeLists.txt  Engine.cpp  Engine.cpp.autosave  Visualizer.cpp
tests/: CMakeLists.txt  Engine_test.cpp
